add sthemecontext, styling for header, create topproducts component.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-h2 {
+/* h2 {
   position: absolute;
   bottom: 138px;
   color: var(--white);
@@ -14,4 +14,4 @@ a {
   bottom: 100px;
   right: 20px;
   color: var(--primary-color-orange);
-}
+} */
